--- a/css/styles.css
+++ b/css/styles.css
@@ -97,12 +97,26 @@ button:focus,
 .navigation-list li {
   display: inline-block;
   margin-left: 25px;
-
-
 }
 
 .navigation-list__item--active {
   text-decoration: none;
+}
+
+footer {
+  clear: both;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  position: absolute;
+  bottom: 10px;
+  width: 100%
+}
+
+.social-media__link {
+  text-decoration: none;
+  margin: 10px;
 }
 
 .paragraph__code {
@@ -122,13 +136,6 @@ button:focus,
   margin-right: 40px;
   height: auto;
   border-radius: 50%;
-}
-
-.page-footer {
-  clear: both;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
 }
 
 .profile {
