Minor bug fixes
Used W3C Linter on pages other than index.html and fixed syntax on them.

--- a/css/styles.css
+++ b/css/styles.css
@@ -229,7 +229,7 @@ footer {
   h1 {
     font-size: 22px;
     text-align: center;
-    margin-left: auto;
+    margin: auto;
   }
   .standard-body {
     display:flex;
